prusti-tests/tests/verify/ui/counterexamples/pure-sum-1.stderr
error: [Prusti: verification error] postcondition of pure function definition might not hold
 --> $DIR/pure-sum-1.rs:7:11
  |
7 | #[ensures(result == (x * (x + 1)) / 2)]
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
note: the error originates here
 --> $DIR/pure-sum-1.rs:7:11
  |
7 | #[ensures(result == (x * (x + 1)) / 2)]
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: counterexample for "x"
  initial value: -2
  final value:   -2
 --> $DIR/pure-sum-1.rs:8:8
  |
8 | fn sum(x:i32) -> i32 {
  |        ^
note: counterexample for result
  final value:   0
 --> $DIR/pure-sum-1.rs:8:18
  |
8 | fn sum(x:i32) -> i32 {
  |                  ^^^

error: aborting due to previous error

